Mobo search - Swapped around expansion slots and IO ports to keep the same order as current search form - Fixed incorrect tom-select drop-down alignment in new search rows

--- a/assets/styles/main/_search.scss
+++ b/assets/styles/main/_search.scss
@@ -346,10 +346,6 @@ div.editor-row {
 		}
 	}
 
-	>div {
-		padding-left: 2px;
-	}
-
 	div.editor-form-widget {
 		padding: 0 !important;
 
